--- a/geofenceTracking/package.json
+++ b/geofenceTracking/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "host": "vite --host"
+    
   },
   "dependencies": {
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
