--- a/geofenceTracking/package.json
+++ b/geofenceTracking/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "host": "vite --host"
-    
   },
   "dependencies": {
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "apexcharts": "^3.52.0",
+    "flowbite": "^2.5.1",
+    "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "styled-components": "^6.1.12"
